--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class='space-x-4 flex absolute text-xl right-20 my-5'>
                         <button class='rounded-3xl w-30 py-1 px-4 border-sky-600 border-2 bg-blue-700 text-white'><a href="login.html">SIGN IN</a></button>
-                        <button class='rounded-3xl w-30 py-1 px-4 border-sky-600 border-2  text-blue-600'>SIGN UP</button>
+                        <button class='rounded-3xl w-30 py-1 px-4 border-sky-600 border-2  text-blue-600'><a href="patient_signup.html">SIGN UP</a></button>
                     </div>
                 </div>
             </div>
