--- a/login.html
+++ b/login.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <div class="relative flex flex-col justify-center min-h-screen overflow-hidden">
+    <div class="relative flex flex-col justify-center min-h-screen overflow-hidden bg-blue-300">
         <div class="w-full p-6 m-auto bg-white rounded-md shadow-xl lg:max-w-xl">
-            <h1 class="text-3xl font-semibold text-center text-purple-700 uppercase">
+            <h1 class="text-3xl font-semibold text-center text-blue-700 uppercase">
                 Sign in
             </h1>
             <form class="mt-6">
@@ -21,21 +21,21 @@
                         Email
                     </label>
                     <input type="email"
-                        class="block w-full px-4 py-2 mt-2 text-purple-700 bg-white border rounded-md focus:border-purple-400 focus:ring-purple-300 focus:outline-none focus:ring focus:ring-opacity-40" />
+                        class="block w-full px-4 py-2 mt-2 text-blue-700 bg-white border rounded-md focus:border-blue-400 focus:ring-blue-300 focus:outline-none focus:ring focus:ring-opacity-40" />
                 </div>
                 <div class="mb-2">
                     <label for="password" class="block text-sm font-semibold text-gray-800">
                         Password
                     </label>
                     <input type="password"
-                        class="block w-full px-4 py-2 mt-2 text-purple-700 bg-white border rounded-md focus:border-purple-400 focus:ring-purple-300 focus:outline-none focus:ring focus:ring-opacity-40" />
+                        class="block w-full px-4 py-2 mt-2 text-blue-700 bg-white border rounded-md focus:border-blue-400 focus:ring-blue-300 focus:outline-none focus:ring focus:ring-opacity-40" />
                 </div>
-                <a href="#" class="text-xs text-purple-600 hover:underline">
+                <a href="#" class="text-xs text-blue-600 hover:underline">
                     Forget Password?
                 </a>
                 <div class="mt-6">
                     <button
-                        class="w-full px-4 py-2 tracking-wide text-white transition-colors duration-200 transform bg-purple-700 rounded-md hover:bg-purple-600 focus:outline-none focus:bg-purple-600">
+                        class="w-full px-4 py-2 tracking-wide text-white transition-colors duration-200 transform bg-blue-600 rounded-md hover:bg-blue-500 focus:outline-none focus:bg-blue-600">
                         Login
                     </button>
                 </div>
@@ -74,11 +74,11 @@
             <p class="mt-8 text-xs font-light text-center text-gray-700">
                 {" "}
                 Don't have an account?{" "}
-                <a href="#" class="font-medium text-purple-600 hover:underline">
+                <a href="patient_signup.html" class="font-medium text-blue-600 hover:underline">
                     Sign up
                 </a>
             </p>
-            <button class="w-50 mx-auto flex my-2 px-4 py-2 tracking-wide text-white transition-colors duration-200 transform bg-purple-700 rounded-md hover:bg-purple-600 focus:outline-none focus:bg-purple-600"><a href="index.html">Back to home</a></button>
+            <button class="w-50 mx-auto flex my-2 px-4 py-2 tracking-wide text-white transition-colors duration-200 transform bg-blue-600 rounded-md hover:bg-blue-500 focus:outline-none focus:bg-purple-600"><a href="index.html">Back to home</a></button>
         </div>
         
     </div>
