--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                         <span class='w-24 text-blue-600 font-bold'>ELECTRONIC HEALTH RECORDS</span>
                     </div>
                     <div class='flex space-x-10 absolute right-80 my-6 text-xl text-blue-600 mr-6'>
-                        <div>Home</div>
-                        <div>About</div>
-                        <div>Features</div>
-                        <div>Contact</div>
+                        <div><a href="#hero">Home</a></div>
+                        <div><a href="#about">About</a></div>
+                        <div><a href="#features">Features</a></div>
+                        <div><a href="#contact">Contact</a></div>
 
                     </div>
                     <div class='space-x-4 flex absolute text-xl right-20 my-5'>
@@ -46,7 +46,7 @@
             </div>
             </div>
         </div>
-        <div id="about" class='bg-blue-200 py-10'>
+        <div id="about" class='bg-blue-200 py-10 scroll-smooth'>
             <div class='text-center font-bold text-3xl'>About Us</div>
             <div class='text-center py-4'>We are dedicated to serve you best medical services</div>
             <div class='w-1/2 text-center mx-auto'>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae officia similique et architecto unde voluptas possimus quod minima est natus maxime aliquid eaque iusto dicta molestias, eius quisquam ad ratione consectetur. Neque tenetur molestias minima et dolorem inventore nostrum eos odit nobis eius amet minus veniam earum officia magni voluptate omnis architecto ipsum explicabo eligendi in, non dolore.</div>
